--- a/recruiter/apps/candidate/templates/candidate/register.html
+++ b/recruiter/apps/candidate/templates/candidate/register.html
@@ -17,9 +17,18 @@
 					id="usboks1">
 						{% csrf_token %}
 						{% include 'candidate/form_template.html' %}
+						{% for field in cv_form %}
 						<div class="form-group">
 							<div class="col-sm-offset-2 col-sm-10">
-								<button type="submit" class="btn btn-success" id="butt_green">Register</button>
+								<span class="text-danger small">{{ field.error }}</span>
+							</div>
+							<label class="control-label col-sm-2">{{ field.label_tag }}</label>
+							<div class="col-sm-10">{{ field }}</div>
+						</div>
+						{% endfor %}
+						<div class="form-group">
+							<div class="col-sm-offset-2 col-sm-10">
+								<button type="submit" class="btn btn-success" id="butt_green" >Register</button>
 							</div>
 						</div>
 					</form>
